-- MySQL Script generated by MySQL Workbench
-- Sun Dec  6 17:51:41 2020
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `mydb` DEFAULT CHARACTER SET utf8 ;
USE `mydb` ;

-- -----------------------------------------------------
-- Table `mydb`.`Dataset`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Dataset` (
  `GUID` INT NOT NULL,
  PRIMARY KEY (`GUID`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Metadata`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Metadata` (
  `key` NVARCHAR(225) NOT NULL,
  `value` VARCHAR(225) NOT NULL,
  `Dataset_GUID` INT NOT NULL,
  PRIMARY KEY (`Dataset_GUID`),
  INDEX `fk_Metadata_Dataset1_idx` (`Dataset_GUID` ASC) VISIBLE,
  CONSTRAINT `fk_Metadata_Dataset1`
    FOREIGN KEY (`Dataset_GUID`)
    REFERENCES `mydb`.`Dataset` (`GUID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Comment`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Comment` (
  `idComment` INT NOT NULL,
  `author` VARCHAR(45) NOT NULL,
  `body` VARCHAR(5000) NOT NULL,
  `parent` VARCHAR(45) NULL,
  `Dataset_GUID` INT NOT NULL,
  PRIMARY KEY (`idComment`, `Dataset_GUID`),
  INDEX `fk_Comment_Dataset1_idx` (`Dataset_GUID` ASC) VISIBLE,
  CONSTRAINT `fk_Comment_Dataset1`
    FOREIGN KEY (`Dataset_GUID`)
    REFERENCES `mydb`.`Dataset` (`GUID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Category`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Category` (
  `idCategory` INT NOT NULL,
  `name` VARCHAR(45) NOT NULL,
  `description` VARCHAR(5000) NOT NULL,
  `Dataset_GUID` INT NOT NULL,
  PRIMARY KEY (`idCategory`, `Dataset_GUID`),
  INDEX `fk_Category_Dataset1_idx` (`Dataset_GUID` ASC) VISIBLE,
  CONSTRAINT `fk_Category_Dataset1`
    FOREIGN KEY (`Dataset_GUID`)
    REFERENCES `mydb`.`Dataset` (`GUID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`User`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`User` (
  `idUser` INT NOT NULL,
  `name` VARCHAR(45) NOT NULL,
  `email` VARCHAR(45) NOT NULL,
  `password` VARCHAR(45) NOT NULL,
  `photo` VARCHAR(45) NULL,
  PRIMARY KEY (`idUser`, `name`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Access`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Access` (
  `role` VARCHAR(45) NOT NULL,
  `permission` LONGTEXT NOT NULL,
  `User_idUser` INT NOT NULL,
  `User_name` VARCHAR(45) NOT NULL,
  `Dataset_GUID` INT NOT NULL,
  PRIMARY KEY (`User_idUser`, `User_name`, `Dataset_GUID`),
  INDEX `fk_Access_User_idx` (`User_idUser` ASC, `User_name` ASC) VISIBLE,
  INDEX `fk_Access_Dataset1_idx` (`Dataset_GUID` ASC) VISIBLE,
  CONSTRAINT `fk_Access_User`
    FOREIGN KEY (`User_idUser` , `User_name`)
    REFERENCES `mydb`.`User` (`idUser` , `name`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Access_Dataset1`
    FOREIGN KEY (`Dataset_GUID`)
    REFERENCES `mydb`.`Dataset` (`GUID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Datafile`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Datafile` (
  `idDatafile` INT NOT NULL,
  `path` LONGTEXT NOT NULL,
  `User_idUser` INT NOT NULL,
  `User_name` VARCHAR(45) NOT NULL,
  `Dataset_GUID` INT NOT NULL,
  PRIMARY KEY (`idDatafile`, `User_idUser`, `User_name`, `Dataset_GUID`),
  INDEX `fk_Datafile_User1_idx` (`User_idUser` ASC, `User_name` ASC) VISIBLE,
  INDEX `fk_Datafile_Dataset1_idx` (`Dataset_GUID` ASC) VISIBLE,
  CONSTRAINT `fk_Datafile_User1`
    FOREIGN KEY (`User_idUser` , `User_name`)
    REFERENCES `mydb`.`User` (`idUser` , `name`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Datafile_Dataset1`
    FOREIGN KEY (`Dataset_GUID`)
    REFERENCES `mydb`.`Dataset` (`GUID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
